# claw-dj

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PROGRESS.md  README.md  pyproject.toml
agent/: midi_bridge.py
agent/hermes-profile/: SOUL.md
agent/hermes-skill/: SKILL.md
agent/hermes-skill/references/: media-export.md  profile-portability.md  youtube-channel-oauth.md
agent/hermes-skill/scripts/: render_teaser_card.swift  render_transition_teaser.py
brain/: agent.py  analyze_bpm.py  analyze_via_mixxx.py  archive_mix_plan.py  build_demo_subset.py  build_lineage_set.py  build_mix_plan.py  build_verse_tour.py  catalog.py  convert_m4a.py  curate_playlist.py  enrich_playlist.py  enrich_set.py  grid_quality.py  library.py  library_index.py  lyric_timeline.py  lyrics.py  mix_directives.py  mix_graph.py  mix_order_brief.py  mix_profiles.py  onset_analysis.py  phrase_analysis.py  pick_candidates.py  playlist.py  playlist_edit.py  playlist_editor.py  portable_library.py  preview_transitions.py  quick_mix.py  scan_library.py  set_player.py  sync_mixxx_analysis.py
brain/playlist_seeds/: extra_folder_hits.json  mix_lineage.json  quick_lineage_demo.json  rnb_west_coast_hits.json
brain/web/: playlist.html
core-rust/: AGENTS.md  Cargo.toml  README.md
core-rust/clawdj/: Cargo.toml
core-rust/clawdj-cli/: Cargo.toml
core-rust/clawdj-cli/src/: main.rs
core-rust/clawdj/src/: chroma.rs  command.rs  control_api.rs  gesture.rs  lib.rs  live.rs  midi.rs  queue.rs
core-rust/clawdj/tests/: live_midi.rs
docs/: ARCHITECTURE.md  BUILD_MIXXX.md  DJ_STYLE_GUIDE.md  DJ_TRANSITIONS_PLAYBOOK.md  HACKATHON.md  HANDOFF.md  HERMES_AGENT_SETUP.md  LINUX_PORT.md  MIXXX_CONTROL_SURFACE.md  MIX_INSTRUMENT.md  MIX_TWO_TRACKS.md  QUICK_MIX_DEMO.md  RNB_HITS_RESEARCH.md  SETUP_NEW_MACHINE.md  VIDEO_DEMO_SCRIPT.md
docs/prior-research/: README.md
docs/prior-research/docs/: ANALYSIS.md  ARCHITECTURE.md  LIVE_LOOP.md  MIXXX_INTEGRATION.md  SETUP_MACOS.md
docs/prior-research/planning/: DECISIONS.md  ROADMAP.md  TASKS.md
docs/prior-research/research/: mixxx-controls.md  prior-art.md
hands/: attended_mix_run.py  beatgrid.py  midi_engine.py  midi_port_server.py  mixxx_control.py  run_mix_plan.py  showcase_mix.py  transition.py
hands/mixxx_mapping/: README.md  clawdj.midi.xml  clawdj.scripts.js  install-mapping-macos.sh
scripts/: start.sh
shared/: commands.py  mixxx_db.py
tests/: test_catalog_curate.py  test_enrich_set.py  test_grid_quality.py  test_incremental_scan.py  test_lyric_timeline.py  test_mix_directives.py  test_mix_editor.py  test_mix_graph.py  test_mix_order_brief.py  test_mix_plan.py  test_mix_runner.py  test_onset_analysis.py  test_phrase_analysis.py  test_playlist.py  test_portable_library.py  test_preview_transitions.py  test_quick_mix.py  test_scan_complete.py  test_verse_tour.py
