[project]
name = "claw-dj"
version = "0.1.0"
description = "Autonomous hip-hop DJ: H Company agent as brain, MIDI engine as hands"
requires-python = ">=3.13"
dependencies = [
    "holo-desktop-cli",
    "mutagen>=1.48.1",
    "python-rtmidi",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["brain", "hands", "shared"]
