[workspace]
members = ["clawdj", "clawdj-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
license = "GPL-3.0"
repository = "https://github.com/InServiceOfX/claw-dj"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
midir = "0.10.3"
once_cell = "1.21.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
