[package]
name = "clawdj-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "clawdj"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clawdj = { path = "../clawdj" }
midir.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
