[package]
name = "clawdj"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
midir.workspace = true
once_cell.workspace = true
realfft = "3.4.0"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
symphonia = { version = "0.5.4", features = ["mp3", "aac", "flac", "isomp4", "wav"] }
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
